--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(120, 33, 8);
-    color: linen;
+    color: plaid;
     font-size: 150%;
     line-height: 1.4;
 }
